# feet-inches

./: README.md
src/: CMakeLists.txt  Feet.cpp  Feet.hpp  test.cpp
